# near-verify-rs

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml  t
.github/workflows/: release-plz.yml  test_examples.yml
src/: env_keys.rs  lib.rs
src/docker_command/: mod.rs
src/logic/: nep330_build.rs
src/logic/docker_checks/: pull_image.rs  sanity.rs
src/logic/internal/docker_command/: mod.rs
src/logic/nep330_build/: output.rs
src/nep330/: mod.rs
src/types/: mod.rs  sha256_checksum.rs  whitelist.rs
src/types/contract_source_metadata/: mod.rs  validate.rs
src/types/internal/: container_paths.rs  mod.rs
src/types/internal/legacy_rust/: manifest_path.rs  metadata.rs
src/types/nep330/: mod.rs
src/types/source_id/: mod.rs
tests/: checkout.rs  tests.rs
tests/resources/: whitelist_err_command.json  whitelist_err_image.json  whitelist_ok_nonstandard_image.json
