[package]
name = "near-verify-rs"
version = "0.1.0"
edition = "2024"


[dependencies]
url = { version = "2.5.0", features = ["serde"] }
serde = { version = "1.0.197" }
eyre = "0.6.12"
colored = "2.0"
tracing = "0.1.40"
shell-words = { version = "1.0.0" }
indenter = "0.3"
unix_path = { version = "1.0.1" }
camino = "1.1.1"
cargo_metadata = "0.18.1"
dunce = "1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29.0", features = ["user", "process"] }