[package]
name = "near-verify-rs"
version = "0.3.2"
edition = "2024"
resolver = "3"
description = "reference implementation of nep330 1.2.0+ docker build"
repository = "https://github.com/near/near-verify-rs"
license = "MIT OR Apache-2.0"
keywords = ["docker", "reproducible-build", "near", "nep330"]

[dependencies]
url = { version = "2.5.0", features = ["serde"] }
serde = { version = "1.0.197" }
eyre = "0.6.12"
colored = "3"
tracing = "0.1.40"
shell-words = { version = "1.0.0" }
indenter = "0.3"
unix_path = { version = "1.0.1" }
camino = "1.1.1"
cargo_metadata = ">=0.21, <0.22"
dunce = "1"
unix_str = "1.0.0"
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4.3"
regex = "1.11.1"
pathdiff = { version = "0.2.1", features = ["camino"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["user", "process"] }


[dev-dependencies]
git2 = { version = "0.20" }
serde_json = "1.0.140"
tempfile = { version = "3.10.1" }
